--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.csis.lab02.MainActivity">
 
+    <!-- TextView displays a line of text-->
+    <!-- wrap_content makes size of widget to size of data inside it i.e. text !-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PURE DATA EXAMPLE"
         android:id="@+id/sampleText"/> <!-- Every resource must be given an id !-->
 
+    <!-- layout controls are always layout_XXXXX="" Play around with this !-->
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,6 +36,7 @@
         android:layout_above="@+id/onOffSwitch"
         android:layout_centerHorizontal="true" />
 
+    <!-- Edit Text is a text field that will bring the keyboard up when tapped !-->
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,4 +53,5 @@
         android:layout_centerVertical="true"
         android:layout_alignStart="@+id/onOffSwitch"
         android:layout_marginStart="15dp" />
+
 </RelativeLayout>
